Fixed  image on mobile

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -174,6 +174,14 @@ img.navbar-logo {
     align-items: center;
 }
 
+img#laptop-img {
+    display: none;
+
+    @include media_query($laptop) {
+        display: block;
+    }
+}
+
 .group-3 {
     display: flex;
     flex-direction: column;
